--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ body {
   margin: 50px;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
  
 tr:hover {
@@ -76,6 +78,8 @@ table {
 }
 
 .devico_logo {
+  height: 70px;
+  width: 70px;
   margin-left: 10%;
   margin-top: 10px;
   width: 70px;
@@ -114,11 +118,20 @@ table {
 }
 
 .left-menu {
-  width: 500px;
+  width: 200px;
   height: 100%;
   margin-top: 90px;
+  margin-left: 10%;
+  display: inline-block;
+  justify-content: flex-start;
+}
+
+.main-space {
+  height: 100%;
+  margin-top: 90px;
+  display: inline-block;
 }
 
 .raised_button_employers {
-
+  
 }
