--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-.App {
+.app {
   float: center;
   margin: 50px;
   height: 100%;
@@ -78,22 +78,20 @@ table {
 }
 
 .devico_logo {
-  height: 70px;
-  width: 70px;
+  height: 50px;
+  width: 50px;
   margin-left: 10%;
-  margin-top: 10px;
-  width: 70px;
-  height: 70px;
+  margin-top: 20px;
+  height: 50px;
 }
 
 .footer {
   background-color: rgb(53, 53, 53);
-  height: 10px;
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1rem;
+  height: 20px;
   text-align: center;
   display: flex;
   flex-direction: row;
